# golang-bazel-starter

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  TODO.md  bazel-bin  bazel-golang-bazel-starter  bazel-out  bazel-testlogs  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
db/auth/: BUILD.bazel
db/auth/migrations/: 20250101000001_setup_permissions.sql
db/config/: BUILD.bazel
db/config/migrations/: 20250101000001_setup_permissions.sql  20250101000002_create_accounts_table.sql  20250101000002_create_grpcserver_user.sql
dev/: README.md  create-cluster.sh  delete-cluster.sh  deploy.sh  docker-compose.yaml  init-cluster.sh  k3s-config.yaml  kind-config.yaml  push-images.sh  registries.yaml  reset-cluster.sh
frontend/: BUILD.bazel  default.conf
frontend/react/: BUILD.bazel  README.md  build_smoke_test.js  defs.bzl  package.json  tsconfig.json  vite.config.js  vite.config.mjs
frontend/react/src/: App.test.tsx  App.tsx  BUILD.bazel  Router.tsx
frontend/react/src/components/: ProtectedRoute.tsx
frontend/react/src/context/: AuthContext.tsx
frontend/react/src/lib/: api.ts  kratos.ts
frontend/react/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Recovery.tsx  Register.tsx  Settings.tsx  Verify.tsx
frontend/tools/lint/: linters.bzl
golang/: go.mod
golang/config/api/: BUILD.bazel  api.go
golang/config/client/: BUILD.bazel  client.go  client_test.go  http_test.go
golang/config/db/: BUILD.bazel  pool.go
golang/config/db/migrations/: 000001_create_accounts_table.down.sql  000001_create_accounts_table.up.sql  000002_create_grpcserver_user.down.sql  000002_create_grpcserver_user.up.sql
golang/config/interfaces/: BUILD.bazel  interfaces.go
golang/config/repository/: BUILD.bazel  interface.go  pool.go
golang/config/server/: BUILD.bazel  server.go
golang/framework/db/: BUILD.bazel  migrate.go  postgres.go
golang/framework/server_builder/: BUILD.bazel  server_builder.go
golang/framework/serverbase/: BUILD.bazel  interface.go  serverbase.go  serverbuilder.go
golang/grpc-server/: BUILD.bazel  main.go  server.go
golang/grpc_server/: BUILD.bazel  main.go  server.go
golang/grpcserver/: BUILD.bazel  main.go  server.go
golang/grpcserver/messenger/: BUILD.bazel  messenger.yaml
golang/middleware/auth/: BUILD.bazel  auth.go  context.go
golang/middleware/middleone/: BUILD.bazel  middleone.go
golang/middleware/middletwo/: BUILD.bazel  middletwo.go
golang/migrate-runner/: BUILD.bazel  main.go
golang/test/: BUILD.bazel  README.md  dbmate.go  grpcserverhttp_test.go  messenger.yaml  postgres_container.go  postgres_container_test.go  test_env.bzl  testcontext.go  testcontextbuilder_test.go  testmiddleone.go  textcontextproviders.go
golang/test/abstract/: BUILD.bazel  mytest_test.go
golang/tools/codegen/interface-gen/: BUILD.bazel  generator.go  main.go  spec.go  templates.go
golang/tools/codegen/messenger-gen/: BUILD.bazel  README.md  generator.go  main.go  spec.go
k8s/app/: BUILD.bazel
k8s/app/cert-manager/: kustomization.yaml
k8s/app/cnpg-operator/: kustomization.yaml
k8s/app/common/certificates/: README.md  kustomization.yaml  root-issuer.yaml  service-cas.yaml  trust-bundles.yaml
k8s/app/common/deployment/: deployment.yaml  serviceaccount.yaml
k8s/app/common/environment/: configmap-environment.yaml  kustomization.yaml
k8s/app/common/namespace/: namespaces.yaml
k8s/app/common/traefik-middleware/: certificate.yaml  kustomization.yaml  redirect-https.yaml
k8s/app/dbmate/base/: certificate.yaml  job.yaml  kustomization.yaml  serviceaccount.yaml
k8s/app/dbmate/dev/: job.yaml  kustomization.yaml
k8s/app/frontend/base/: certificate.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/app/frontend/dev/: ingress.yaml  kustomization.yaml
k8s/app/grpcserver/base/: certificate.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/app/grpcserver/dev/: certificate.yaml  ingress.yaml  kustomization.yaml
k8s/app/kratos/base/: certificate.yaml  deployment.yaml  identity-schema.yaml  kustomization.yaml  service.yaml
k8s/app/kratos/dev/: configmap.yaml  ingress.yaml  kustomization.yaml  secret.yaml
k8s/app/migrate-runner/base/: job.yaml  kustomization.yaml  serviceaccount.yaml
k8s/app/nginx-ingress/dev/: kustomization.yaml
k8s/app/otel-collector/base/: configmap.yaml  deployment.yaml  service.yaml
k8s/app/postgres/: SSL-AUTH.md
k8s/app/postgres/base/: certificate.yaml  cluster.yaml  kustomization.yaml  secret.yaml
k8s/app/postgres/dev/: ca-bundle.yaml  certificate.yaml  cluster-patch.yaml  kustomization.yaml
k8s/app/registry/base/: deployment.yaml  service.yaml
k8s/app/registry/dev/: certificate.yaml  disable-tls.yaml  ingress.yaml  kustomization.yaml
k8s/app/trust-manager/: clusterrole-patch.yaml  kustomization.yaml
k8s/infra/: BUILD.bazel  dbmate.bzl  image.bzl  k8s.bzl  server.bzl
proto/: rust_proto_gen.bzl
proto/common/v1/: BUILD.bazel  common.proto
proto/configuration/v1/: BUILD.bazel  configuration.proto
proto/configuration_service/v1/: BUILD.bazel  configuration_service.proto
tools/codegen/interface-gen/: BUILD.bazel  generator.go  main.go  spec.go  templates.go
tools/codegen/messenger-gen/: BUILD.bazel  README.md  main.go  spec.go  templates.go
