"""Golang Bazel Starter Module."""

bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251104-53af3b72")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "rules_proto_grpc_grpc_gateway", version = "5.8.0")
bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "2.27.3")

# k8s
bazel_dep(name = "rules_kustomize", version = "0.5.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_shell", version = "0.6.1")

kustomize = use_extension("@rules_kustomize//kustomize:extensions.bzl", "kustomize")
kustomize.download(version = "v5.7.1")

helm = use_extension("@rules_kustomize//kustomize:extensions.bzl", "helm")
helm.download(version = "v3.19.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_docker_docker", "com_github_golang_migrate_migrate_v4", "com_github_google_uuid", "com_github_jackc_pgx_v5", "com_github_testcontainers_testcontainers_go", "in_gopkg_yaml_v3", "org_golang_google_grpc")
