load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//k8s/infra:image.bzl", "build_sha265_tag")

# Package the React build output for nginx
# nginx-unprivileged serves from /usr/share/nginx/html
pkg_files(
    name = "frontend_files",
    srcs = ["//frontend/react:build"],
    strip_prefix = strip_prefix.from_root("frontend/react/dist"),
)

pkg_tar(
    name = "frontend_static_tar",
    srcs = [":frontend_files"],
    package_dir = "/usr/share/nginx/html",
)

# Custom nginx config for SPA routing (overrides default.conf)
pkg_tar(
    name = "frontend_nginx_config_tar",
    srcs = ["default.conf"],
    package_dir = "/etc/nginx/conf.d",
)

# Build the frontend nginx image
oci_image(
    name = "frontend_image",
    base = "@nginx",
    exposed_ports = ["8080"],
    tars = [
        ":frontend_static_tar",
        ":frontend_nginx_config_tar",
    ],
    visibility = ["//visibility:public"],
)

# Generate SHA256 tag for immutable versioning
build_sha265_tag(
    name = "frontend_remote_tag",
    image = ":frontend_image",
    input = "frontend_image.json.sha256",
    output = "_tag.txt",
)

# Push targets for registry.localhost
oci_push(
    name = "frontend_registry.localhost_push_sha256_tag",
    image = ":frontend_image",
    remote_tags = ":frontend_remote_tag",
    repository = "registry.localhost:5001/frontend",
    visibility = ["//visibility:public"],
)

oci_push(
    name = "frontend_registry.localhost_push_latest_tag",
    image = ":frontend_image",
    remote_tags = ["latest"],
    repository = "registry.localhost:5001/frontend",
    visibility = ["//visibility:public"],
)

multirun(
    name = "frontend_push",
    commands = [
        ":frontend_registry.localhost_push_sha256_tag",
        ":frontend_registry.localhost_push_latest_tag",
    ],
)
