load("//k8s/infra:dbmate.bzl", "dbmate_image")

# Export migration files
filegroup(
    name = "migrations",
    srcs = glob(["migrations/*.sql"]),
    visibility = ["//visibility:public"],
)

# Create dbmate image with auth database migrations
dbmate_image(
    name = "dbmate_auth",
    migrations = [":migrations"],
)
