load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "grpc-server_lib",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/grpc-server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/common/v1:common",
        "//proto/configuration/v1:configuration",
        "//proto/configuration_service/v1:configuration_service",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "grpc-server",
    embed = [":grpc-server_lib"],
    visibility = ["//visibility:public"],
)
