load("@rules_go//go:def.bzl", "go_library")
load("//k8s/infra:server.bzl", "go_binary")

go_binary(
    name = "grpcserver",
    embed = [":grpcserver_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpcserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/grpcserver",
    visibility = ["//visibility:public"],
    deps = [
        "//golang/config/api",
        "//golang/config/repository",
        "//golang/framework/db",
        "//golang/framework/serverbase",
        "//golang/grpcserver/messenger",
        "//golang/middleware/auth",
        "//golang/middleware/middleone",
        "//golang/middleware/middletwo",
    ],
)
