load("@rules_go//go:def.bzl", "go_library")
load("//k8s/infra:server.bzl", "go_binary")

go_library(
    name = "migrate-runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/migrate-runner",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/config/db",
        "//golang/framework/db",
    ],
)

go_binary(
    name = "migrate-runner",
    embed = [":migrate-runner_lib"],
    visibility = ["//visibility:public"],
)
