load("@rules_go//go:def.bzl", "go_library")
load(":test_env.bzl", "go_test")

# gazelle:map_kind go_test go_test //golang/test:test_env.bzl

go_test(
    name = "test_test",
    testonly = True,
    srcs = ["testcontextbuilder_test.go"],
    deps = [
        ":test",
        "//golang/config/client",
    ],
)

go_library(
    name = "test",
    srcs = [
        "testcontext.go",
        "testmiddleone.go",
        "textcontextproviders.go",
    ],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/test",
    visibility = ["//visibility:public"],
    deps = [
        "//golang/config/db",
        "//golang/config/repository",
        "//golang/framework/db",
        "//golang/framework/serverbase",
        "//golang/generated/interfaces",
        "//golang/grpcserver:grpcserver_lib",
        "//golang/grpcserver/messenger",
        "//golang/middleware/middleone",
        "//golang/middleware/middletwo",
        "//proto/configuration/v1:configuration",
        "@com_github_docker_docker//api/types/container",
        "@com_github_google_uuid//:uuid",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
    ],
)
