load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/config/client",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common/v1:common",
        "//proto/configuration/v1:configuration",
        "//proto/configuration_service/v1:gateway",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
