load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["pool.go"],
    embedsrcs = [
        "migrations/000001_create_accounts_table.down.sql",
        "migrations/000001_create_accounts_table.up.sql",
    ],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/config/db",
    visibility = ["//visibility:public"],
    deps = [
        "//golang/config/repository",
        "//golang/framework/db",
        "//proto/common/v1:common",
        "//proto/configuration/v1:configuration",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
