load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["migrations.go"],
    embedsrcs = [
        "migrations/000001_create_accounts_table.down.sql",
        "migrations/000001_create_accounts_table.up.sql",
    ],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/config/db",
    visibility = ["//visibility:public"],
)
