load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "interfaces",
    srcs = ["interfaces.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/config/interfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common/v1:common",
        "//proto/configuration/v1:configuration",
    ],
)
