load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["pool.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/config/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//golang/config/interfaces",
        "//golang/framework/db",
        "//proto/common/v1:common",
        "//proto/configuration/v1:configuration",
    ],
)
