load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server_builder",
    srcs = ["server_builder.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/framework/server_builder",
    visibility = ["//visibility:public"],
    deps = [
        "@grpc_ecosystem_grpc_gateway//runtime",
        "@org_golang_google_grpc//:grpc",
    ],
)
