load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleone",
    srcs = ["middleone.go"],
    importpath = "github.com/berendjan/golang-bazel-starter/golang/middleware/middleone",
    visibility = ["//visibility:public"],
    deps = [
        "//golang/generated/interfaces",
        "//proto/configuration/v1:configuration",
    ],
)
