load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "common_v1_proto",
    srcs = ["common.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common_v1_go_proto",
    importpath = "github.com/berendjan/golang-bazel-starter/proto/common/v1",
    proto = ":common_v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "common",
    embed = [":common_v1_go_proto"],
    importpath = "github.com/berendjan/golang-bazel-starter/proto/common/v1",
    visibility = ["//visibility:public"],
)
