load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "configuration_service_v1_proto",
    srcs = ["configuration_service.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common/v1:common_v1_proto",
        "//proto/configuration/v1:configuration_v1_proto",
    ],
)

go_proto_library(
    name = "configuration_service_v1_go_proto",
    compilers = ["@rules_go//proto:go_grpc_v2"],
    importpath = "github.com/berendjan/golang-bazel-starter/proto/configuration_service/v1",
    proto = ":configuration_service_v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common/v1:common",
        "//proto/configuration/v1:configuration",
    ],
)

go_library(
    name = "configuration_service",
    embed = [":configuration_service_v1_go_proto"],
    importpath = "github.com/berendjan/golang-bazel-starter/proto/configuration_service/v1",
    visibility = ["//visibility:public"],
)
